#Test commit.
Для проверки реализации основной функциональности:
- Покрытие по тестам доведено до 100%.
- Внесены исправления в реализованные тесты.